--- a/index.html
+++ b/index.html
@@ -323,6 +323,13 @@
 
         </div>
 
+       <div class="button">
+           <button type="action">
+             <a href="pdf/erickbernardo_port.pdf" title="Download resume">Download resume</a>
+           </button> 
+       </div>
+
+
       </div>
     </section><!-- End Resume Section -->
 
