--- a/index.html
+++ b/index.html
@@ -271,14 +271,15 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>BUSINESS INTELLIGENCE AND ANALYTICS CONSULTANT</h4>
+              <h5>2019 - 2021</h5>
+              <p><em>Innofact - The Innovation Factory, São Paulo, Brazil </em></p>
+              <p><em>Experience with Business Intelligence and Analytics: </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>ETL processes; extraction, analysis and data visualization.</li>
+                <li>PL / SQL developments. </li>
+                <li>Experience with Oracle Analytics Cloud (OAC), Oracle Business Enterprise Edition (OBIEE); Oracle BI Publisher and Oracle Transactional Business Intelligence (OTBI).</li>
+                <li>Analysis for Oracle Supply Chain Management and Project Portfolio Management Cloud.</li>
               </ul>
             </div>
             <div class="resume-item">
