--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>BUSINESS INTELLIGENCE AND ANALYTICS CONSULTANT</h4>
-              <h5>2019 - 2021</h5>
+              <h5>08/2019 - 05/2021</h5>
               <p><em>Innofact - The Innovation Factory, São Paulo, Brazil </em></p>
               <p><em>Experience with Business Intelligence and Analytics: </em></p>
               <ul>
@@ -283,16 +283,56 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>FUNCTIONAL CONSULTANT FOR ORACLE PPM AND ORACLE BUSINESS INTELLIGENCE AND ANALYTICS</h4>
+              <h5>05/2019 - 08/2019</h5>
+              <p><em>Innofact - The Innovation Factory, São Paulo, Brazil </em></p>
+              <p><em>Experience in implementing the Oracle Fusion Project Portfolio Management Cloud: </em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Definition of processes with the customer.</li>
+                <li>Environment settings for Innovation Management, Product Proposal Management and Project Execution Management. </li>
+                <li>Analytics training and development of reports and dashboards for Oracle PPM.</li>
+              </ul>
+            </div>            
+            <div class="resume-item">
+              <h4>CONTINUOUS IMPROVEMENT ENGINEER | SOLAR ARRAYS PROD. PLANNING & CONTROL</h4>
+              <h5>2018 - 2019</h5>
+              <p><em>AIRBUS D&S, MUNICH, GERMANY</em></p>
+              <p><em>Primary responsibilities were:</em></p>
+              <ul>
+                <li>Developing process improvements.</li>
+                <li>Developing a Production Backward Planning and a VBA/Excel tool for production packages management.</li>
+                <li>Coding with VBA a lead time database for projects.</li>
+                <li>Elaborating Balanced Scorecard reports.</li>
+                <li>Coordinating an Agile team of 6 students involved in improvement projects.</li>
+                <li>Supporting SAP ERP Data Quality and Material Flow projects.</li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>FAPESP RESEARCHER | GENETIC ALGORITHMS</h4>
+              <h5>08/2017 - 02/2018</h5>
+              <p><em>The São Paulo Research Foundation, São Paulo, Brazil </em></p>
+              <p><em>Scientific Initiation: Multidisciplinary and multiobjective optimization applied to sailplane conceptual design. </em></p>
+              <p><em>Project sponsored by The São Paulo Research Foundation (FAPESP). </em></p>
+              <ul>
+                <li>Development of a computational tool in Matlab for the integration of genetic algorithms, XFLR5 and Digital DATCOM.</li>
+                <li>Process optimization through numerical methods, genetic algorithms, and data analysis. </li>
+                <li>Database creation and manipulation.</li>
+                <li> Integrated analysis of flight performance, aerodynamics, and aircraft stability.</li>
+              </ul>
+            </div> 
+            <div class="resume-item">
+              <h4>ENGINEERING INTERN | AIRCRAFT CERTIFICATION</h4>
+              <h5>03/2017 - 07/2017</h5>
+              <p><em>Aeroálcool Tecnologia Ltda, Franca, Brazil </em></p>
+              <p><em>Primary responsibilities were: </em></p>
+              <ul>
+                <li>Calculating airframe stress loads, flight envelopes and load factors.</li>
+                <li>Fatigue and damage tolerance calculation for metallic and non-metallic structures. </li>
+                <li>Computing analysis of stress loads using MSC Patran/ Nastran software. </li>
+                <li>Analyzing flight test data.</li>
+                <li>Writing technical reports for certification according to ASTM F2245 requirements for light sport aircraft (LSA).</li>
+              </ul>
+            </div>                         
           </div>
   
           <div class="col-lg-6">
