--- a/index.html
+++ b/index.html
@@ -349,16 +349,35 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
+              <h4>  CERTIFICATION IN DATA SCIENCE</h4>
+              <h5>2020 - 2021</h5>
+              <p><em>The Federal University of Technology – (UTFPR) , Paraná, Brazil</em></p>
+              <ul>
+                <li>Data Analysis with Python and R.</li>
+                <li>Machine Learning Models. </li>
+                <li>Big Data and Data engineering. </li>
+                <li>Data modeling.</li>
+              </ul>
+              </div>
+              <div class="resume-item">
+                <h4> DATA SCIENTIST TRAINING </h4>
+                <h5>2019 - 2021</h5>
+                <p><em>Data Science Academy - DSA , Brazil</em></p>
+                <p><em>452 h training involving the following skills:</em></p>
+                <ul>
+                  <li>Big Data Analytics with R and Microsoft Azure Machine Learning.</li>
+                  <li>Big Data Real-Time Analytics with Python and Spark. </li>
+                  <li>Data Engineering with Hadoop and Spark. </li>
+                  <li>Machine Learning.</li>
+                  <li>Business Analytics.</li>
+                  <li>Data Visualization and Design of dashboards.</li>
+                </ul>
+              </div>              
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>BACHELOR'S DEGREE IN AERONAUTICAL ENGINEERING</h4>
+              <h5>2013 - 2017</h5>
+              <p><em>University of São Paulo, São Paulo, Brazil</em></p>
+              <p>Main subjects: Aircraft Design | Aerodynamica | Structures | Manufacturing | Project Management (PMBOK) | Flight Dynamics and Control.    </p>
             </div>
           </div>
 
