--- a/index.html
+++ b/index.html
@@ -379,25 +379,26 @@
               <p><em>University of São Paulo, São Paulo, Brazil</em></p>
               <p>Main subjects: Aircraft Design | Aerodynamica | Structures | Manufacturing | Project Management (PMBOK) | Flight Dynamics and Control.    </p>
             </div>
+            <div class="resume-item">
+              <h4> CERTIFICATION | GREEN BELT LEAN SIX SIGMA </h4>
+              <h5>2017</h5>
+              <p><em>DNC Group , São Paulo, Brazil</em></p>
+              <p><em>ASQ standard training involving the following skills:</em></p>
+              <ul>
+                <li>Statistical  hypothesis testing / PDCA/ DOE / 5S.</li>
+                <li>Lean Manufacturing / Six Sigma / DMAIC methodology. </li>
+                <li>Process flow mapping/ SIPOC / Root Cause Analysis - RCA. </li>
+                <li>MSA / VSM / Process Capability (Cp, Cpk, Pp, Ppk.</li>
+              </ul>
+            </div>             
           </div>
-          <div class="resume-item">
-            <h4> CERTIFICATION | GREEN BELT LEAN SIX SIGMA </h4>
-            <h5>2017</h5>
-            <p><em>DNC Group , São Paulo, Brazil</em></p>
-            <p><em>ASQ`s standard training involving the following skills:</em></p>
-            <ul>
-              <li>Statistical  hypothesis testing / PDCA/ DOE / 5S.</li>
-              <li>Lean Manufacturing / Six Sigma / DMAIC methodology. </li>
-              <li>Process flow mapping/ SIPOC / Root Cause Analysis - RCA. </li>
-              <li>MSA / VSM / Process Capability (Cp, Cpk, Pp, Ppk.</li>
-            </ul>
-          </div>           
+          
 
         </div>
 
        <div class="button">
            <button type="action">
-             <a href="pdf/erickbernardo_port.pdf" title="Download resume">Download resume</a>
+             <a href="pdf/ErickBernardo_DS_geral.pdf" title="Download resume">Download resume</a>
            </button> 
        </div>
 
