--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="26" data-purecounter-duration="1" class="purecounter"></span>
               <p>Completed Projects</p>
             </div>
           </div>
@@ -547,7 +547,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>These are some tasks where I can use my skills to generate efficient and effective solutions to problems that you may face.</p>
         </div>
 
         <div class="row">
@@ -560,8 +560,8 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Machine Learning (Predictive Analysis)</a></h4>
+              <p>Developing predictive models that analyze historical data to create predictions of interest.</p>
             </div>
           </div>
 
@@ -573,8 +573,8 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Diagnostic Analysis</a></h4>
+              <p>Using advanced analysis based on detailed research, data discovery, data mining, and correlations to examine your data and answer why an event has occurred.</p>
             </div>
           </div>
 
@@ -586,8 +586,8 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Descriptive Analysis</a></h4>
+              <p>Applying different statistical techniques to describe, organize and summarize your data set so that it is possible to understand what happened.</p>
             </div>
           </div>
 
@@ -599,8 +599,8 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Prescriptive Analysis</a></h4>
+              <p>Defining the best strategy based on the available data so that you can take the best decision possible.</p>
             </div>
           </div>
 
@@ -612,8 +612,8 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Dele Cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">Data Visualization & Dashboard Design</a></h4>
+              <p>Creating responsive and interactive graphics with excellent designs to summarize and present your data, providing the visualization of the Big Picture.</p>
             </div>
           </div>
 
@@ -625,8 +625,8 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Consultancy</a></h4>
+              <p>Providing expert support from a data scientist and researcher to solve business problems, minimizing the chances of failure in the project development.</p>
             </div>
           </div>
 
@@ -652,19 +652,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Curitiba, Paraná, Brazil</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4>E-mail:</h4>
+                <p>erick.bernardo.eng@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+55 (11) 98993-6994</p>
               </div>
 
             </div>
@@ -708,8 +708,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Erick Bernardo</h3>
+      <p>Thank you for visiting my page, contact me on my social networks!</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
