--- a/index.html
+++ b/index.html
@@ -710,11 +710,9 @@
       <h3>Erick Bernardo</h3>
       <p>Thank you for visiting my page, contact me on my social networks!</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/erickbernardo10/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://twitter.com/EuErickBernardo" class="twitter"><i class="bx bxl-twitter"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
