--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                 </svg>
                 <i class="bx bx-task"></i>
               </div>
-              <h4><a href="">Consultancy</a></h4>
+              <h4><a href="#contact">Consultancy</a></h4>
               <p>Providing expert support from a data scientist and researcher to solve business problems, minimizing the chances of failure in the project development.</p>
             </div>
           </div>
