--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 </svg>
                 <i class="bx bx-rocket"></i>
               </div>
-              <h4><a href="">Machine Learning (Predictive Analysis)</a></h4>
+              <h4><a href="#contact">Machine Learning (Predictive Analysis)</a></h4>
               <p>Developing predictive models that analyze historical data to create predictions of interest.</p>
             </div>
           </div>
@@ -572,7 +572,7 @@
                 </svg>
                 <i class="bx bxs-report"></i>
               </div>
-              <h4><a href="">Diagnostic Analysis</a></h4>
+              <h4><a href="#contact">Diagnostic Analysis</a></h4>
               <p>Using advanced analysis based on detailed research, data discovery, data mining, and correlations to examine your data and answer why an event has occurred.</p>
             </div>
           </div>
@@ -585,7 +585,7 @@
                 </svg>
                 <i class="bx bx-file-find"></i>
               </div>
-              <h4><a href="">Descriptive Analysis</a></h4>
+              <h4><a href="#contact">Descriptive Analysis</a></h4>
               <p>Applying different statistical techniques to describe, organize and summarize your data set so that it is possible to understand what happened.</p>
             </div>
           </div>
@@ -598,7 +598,7 @@
                 </svg>
                 <i class="bx bx-bar-chart"></i>
               </div>
-              <h4><a href="">Prescriptive Analysis</a></h4>
+              <h4><a href="#contact">Prescriptive Analysis</a></h4>
               <p>Defining the best strategy based on the available data so that you can take the best decision possible.</p>
             </div>
           </div>
@@ -611,7 +611,7 @@
                 </svg>
                 <i class="bx bx-pie-chart-alt"></i>
               </div>
-              <h4><a href="">Data Visualization & Dashboard Design</a></h4>
+              <h4><a href="#contact">Data Visualization & Dashboard Design</a></h4>
               <p>Creating responsive and interactive graphics with excellent designs to summarize and present your data, providing the visualization of the Big Picture.</p>
             </div>
           </div>
