--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Deep learning</li>
-              <li data-filter=".filter-card">Machine learning</li>
+              <li data-filter=".filter-ml">Machine learning</li>
+              <li data-filter=".filter-card">Deep learning</li>
               <li data-filter=".filter-web">Data analysis</li>
             </ul>
           </div>
@@ -427,14 +427,14 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Título 01</h4>
-                <p>Descrição projeto</p>
+                <h4>Telecom Customer Churn Prediction</h4>
+                <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 01"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/project-01-telecom-customer-churn.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Telecom Customer Churn Prediction"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details-01.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
