--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" class="img-fluid" alt="" width="800" height="529">
               <div class="portfolio-info">
                 <h4>Telecom Customer Churn Prediction</h4>
                 <p>Predição de rotatividade de clientes em uma operadora de telecomunicações.</p>
