--- a/portfolio-details-01.html
+++ b/portfolio-details-01.html
@@ -50,15 +50,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/project-01-telecom-customer-churn.png" alt="">
                 </div>
 
               </div>
@@ -70,16 +62,19 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Machine Learning / Classification</li>
+                <li><strong>Project date</strong>: 10 October, 2021</li>
+                <li><strong>Project URL</strong>: <a href="https://erickbernardo.github.io/Project-01-ML-Telecom-Customer-Churn-Pred/">https://erickbernardo/Telecom-Customer-Churn-Pred/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Predicting Customer Churn</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Customer Churn ou Rotatividade de Clientes refere-se a decisão tomada por clientes em abandonar os serviços prestados por uma empresa, finalizando assim o relacionamento comercial entre ambos. O percentual de rotatividade de clientes complementa o percentual de fidelidade de clientes somando ambos 100%.
+
+                Empresas buscam fidelizar seus clientes, principalmente aqueles que trazem os maiores lucros para a empresa. Assim é uma vantagem comercial conseguir prever quais os clientes que possuem a maior probabilidade de encerrarem seus relacionamentos comerciais com a empresa, bem como as características de tais clientes para que políticas internas possam ser planejadas.
+                
+                Neste projeto implementa-se um modelo preditivo para prever o Customer Churn de uma operadora de telecomunicações, utilizando-se a linguagem Python e um dataset disponível no Kaggle.
               </p>
             </div>
           </div>
