--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Erick Bernardo</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Scientist, Data Analyst"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/erickbernardo10/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
