--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h1>Erick Bernardo</h1>
       <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist"></span></p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/erickbernardo10/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/erickbernardo10/?locale=en_US" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://twitter.com/EuErickBernardo" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!-- <a href="#" class="medium"><i class="bx bxl-medium-square"></i></a> -->
@@ -78,12 +78,12 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Business Intelligence & Analytics Consultant. Experience in data analysis and visualization, machine learning, BI, data modeling, ETL processes and SQL development for Oracle Cloud. Experience in BI projects for Oracle Supply Chain Management and Oracle Project Portfolio Management Cloud for the Health and Non-Cyclic Consumer sector. Expertise in continuous improvement projects, data analysis and implementation of processes and key performance indicators (KPIs) at Airbus Defence & Space, Germany.</p>
+          <p>Business Intelligence & Analytics Consultant. Experience in data analysis and data visualization, machine learning, BI, data modeling, ETL processes and SQL development for Oracle Cloud. Experience in BI projects for Oracle Supply Chain Management and Oracle Project Portfolio Management Cloud for the Health and Non-Cyclic Consumer sector. Expertise in continuous improvement projects, data analysis and implementation of processes and key performance indicators (KPIs) at Airbus Defence & Space, Germany.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-01.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Data Scientist &amp; Data Analyst.</h3>
