--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="assets/img/profile-02.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Data Scientist &amp; Data Analyst.</h3>
+            <h3> Data Analyst &amp; Data Scientist.</h3>
             <p class="fst-italic">
               Business Intelligence & Analytics Consultant
             </p>
@@ -94,14 +94,13 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2 June 1991</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+55 (11) 98993-6994</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+55 (41) 99971-8431</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Curitiba / (Paraná, Brazil)</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Graduate</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Graduate and Specialization</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>erick.bernardo.eng@gmail.com</span></li>
                 </ul>
               </div>
