--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Business Intelligence & Analytics Consultant. Experience in data analysis and data visualization, machine learning, BI, data modeling, ETL processes and SQL development for Oracle Cloud. Experience in BI projects for Oracle Supply Chain Management and Oracle Project Portfolio Management Cloud for the Health and Non-Cyclic Consumer sector. Expertise in continuous improvement projects, data analysis and implementation of processes and key performance indicators (KPIs) at Airbus Defence & Space, Germany.</p>
+          <p>Business Intelligence & Analytics Consultant. Experience in data analysis and data visualization, web analytics, machine learning, BI, data modeling, ETL processes and SQL development. Experience in BI projects for Oracle Supply Chain Management and Oracle Project Portfolio Management Cloud for the Health and Non-Cyclic Consumer sector. Expertise in continuous improvement projects, data analysis and implementation of processes and key performance indicators (KPIs) at Airbus Defence & Space, Germany.</p>
         </div>
 
         <div class="row">
@@ -115,12 +115,81 @@
       </div>
     </section><!-- End About Section -->
 
+
+    <!-- ======= SOFT Skills Section ======= -->
+    <section id="skills" class="skills section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>SOFT SKILLS</h2>
+          <p>These are my main soft skills that I have been developing throughout my professional life.</p>
+        </div>
+
+        <div class="row skills-content">
+
+          <div class="col-lg-6">
+
+            <div class="progress">
+              <span class="skill"> COMMUNICATION <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">ANALYTICAL THINKING <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">ADAPTABILITY <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div> 
+
+                 </div>
+
+          <div class="col-lg-6">
+
+            <div class="progress">
+              <span class="skill">TEAM BUILDING <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+
+            <div class="progress">
+              <span class="skill">PROACTIVE <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>            
+
+            <div class="progress">
+              <span class="skill">SELF LEARNER <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div> 
+     
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Skills Section -->
+
+
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2>Hard Skills</h2>
           <p>These are my skill levels with the most popular technologies on the market today.</p>
         </div>
 
@@ -143,14 +212,36 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MACHINE LEARNING (SCIKIT-LEARN, PYTORCH, CARET) <i class="val">GOOD</i></span>
+              <span class="skill">MICROSOFT EXCEL/ VBA <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
+              <span class="skill">Oracle Business Intelligence Enterprise Edition <i class="val">ADVANCED</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Oracle BI Publisher / Oracle Analytics Publisher <i class="val">ADVANCED</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+
+            <div class="progress">
               <span class="skill">DATA ANALYSIS/ VISUALIZATION <i class="val">GOOD</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>  
+
+            <div class="progress">
+              <span class="skill">MACHINE LEARNING (SCIKIT-LEARN, PYTORCH, CARET) <i class="val">GOOD</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -163,15 +254,43 @@
               </div>
             </div>  
 
+
+          </div>
+
+          <div class="col-lg-6">
+
             <div class="progress">
-              <span class="skill">ORACLE ANALYTICS CLOUD <i class="val">GOOD</i></span>
+              <span class="skill">digital marketing analytics <i class="val">GOOD</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div>
+            </div>  
 
             <div class="progress">
-              <span class="skill">APACHE SPARK <i class="val">INTERMEDIATE</i></span>
+              <span class="skill">Google ADS / Facebook ADS <i class="val">GOOD</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>  
+
+ 
+            <div class="progress">
+              <span class="skill">Google Data Studio <i class="val">INTERMEDIATE</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>            
+
+
+            <div class="progress">
+              <span class="skill">Google Analytics / GTM <i class="val">INTERMEDIATE</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div> 
+
+            <div class="progress">
+              <span class="skill">ETL <i class="val">INTERMEDIATE</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -183,11 +302,6 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
- 
-
-          </div>
-
-          <div class="col-lg-6">
 
             <div class="progress">
               <span class="skill">MICROSOFT POWER BI <i class="val">INTERMEDIATE</i></span>
@@ -196,56 +310,14 @@
               </div>
             </div>
 
-
             <div class="progress">
-              <span class="skill">GIT / GITHUB <i class="val">INTERMEDIATE</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>            
-
-            <div class="progress">
-              <span class="skill">ETL <i class="val">INTERMEDIATE</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">APACHE HADOOP <i class="val">BEGINNER</i></span>
+              <span class="skill">APACHE HADOOP / SPARK <i class="val">BEGINNER</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">MICROSOFT AZURE CLOUD<i class="val">BEGINNER</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">AWS <i class="val">BEGINNER</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">ORACLE CLOUD <i class="val">BEGINNER</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
             
-            <div class="progress">
-              <span class="skill">MICROSOFT AZURE MACHINE LEARNING <i class="val">BEGINNER</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
 
           </div>
 
@@ -268,6 +340,18 @@
   
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Digital Marketing Analytics Specialist </h4>
+              <h5>06/2021 - Today</h5>
+              <p><em>My own business, Brazil </em></p>
+              <p><em>Experience with Performance Marketing: </em></p>
+              <ul>
+                <li>Turning data into profit for any digital business.</li>
+                <li>Managing digital marketing campaigns.</li>
+                <li>Defining and tracking digital business KPIs. </li>
+                <li>Developing dashboard and reports.</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>BUSINESS INTELLIGENCE AND ANALYTICS CONSULTANT</h4>
               <h5>08/2019 - 05/2021</h5>
@@ -396,9 +480,14 @@
 
        <div class="button">
            <button type="action">
-             <a href="pdf/ErickBernardo_DS_geral.pdf" title="Download resume">Download resume</a>
+             <a href="pdf/ErickBernardo_EN_ptf.pdf" title="Download resume">Download resume (English)</a>
            </button> 
        </div>
+       <div class="button">
+        <button type="action">
+          <a href="pdf/ErickBernardo_PTB_ptf.pdf" title="Download resume">Download resume (Portuguese)</a>
+        </button> 
+    </div>
 
 
       </div>
@@ -664,7 +753,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+55 (11) 98993-6994</p>
+                <p>+55 (41) 99971-8431</p>
               </div>
 
             </div>
@@ -711,7 +800,7 @@
       <h3>Erick Bernardo</h3>
       <p>Thank you for visiting my page, contact me on my social networks!</p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/erickbernardo10/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/erickbernardo10/?locale=en_US" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://twitter.com/EuErickBernardo" class="twitter"><i class="bx bxl-twitter"></i></a>
       </div>
